--- a/Front-end/test-rhitmo/src/app/pages/customer-registration/customer-registration.component.scss
+++ b/Front-end/test-rhitmo/src/app/pages/customer-registration/customer-registration.component.scss
@@ -9,9 +9,9 @@ $border-color: #EEF3F7;
 $main-font: 'Koh Santepheap', serif;
 $header-title-font: 'Inter', sans-serif;
 
-$main-font-size: 24px;
-$title-page-font-size: 64px;
-$error-message-font-size: 20px;
+$main-font-size: 1.5rem;
+$title-page-font-size: 4rem;
+$error-message-font-size: 1.25rem;
 
 $main-font-weight: 400;
 
@@ -43,34 +43,34 @@ body {
 
 .header {
     display: flex;
-    height: 69px;
-    padding: 0 32px;
+    height: 4.3125rem;
+    padding: 0 2rem;
     justify-content: space-between;
     align-items: center;
     background-color: $header-footer-color;
 
     &--logo {
-        width: 25px;
-        height: 25px;
+        width: 1.5625rem;
+        height: 1.5625rem;
     }
 
     &--title {
         color: $header-title-color;
         font-family: $header-title-font;
-        font-size: 18px;
-        margin-top: 10px;
-        word-spacing: 32px;
+        font-size: 1.125rem;
+        margin-top: 0.625rem;
+        word-spacing: 2rem;
     }
 }
 
 .title-page {
     background-color: rgba($title-page-background-color, 0.5);
-    height: 137px;
+    height: 8.5625rem;
     display: flex;
     justify-content: center;
 
     &--text {
-        padding-top: 34px;
+        padding-top: 2.125rem;
         width: 70%;
         font-size: $title-page-font-size;
     }
@@ -84,19 +84,19 @@ main {
 
 .form-body {
     width: 70vw;
-    margin-top: 66px;
+    margin-top: 4.125rem;
 
     &__field {
         display: flex;
         flex-direction: column;
-        margin-bottom: 19px;
+        margin-bottom: 1.1875rem;
 
         &--input {
-            height: 63px;
-            border-radius: 6px;
+            height: 3.9375rem;
+            border-radius: 0.375rem;
             background: rgba($title-page-background-color, 0.5);
-            margin-top: 3px;
-            padding-left: 12px;
+            margin-top: 0.1875rem;
+            padding-left: 0.75rem;
         }
 
         &--error-message {
@@ -108,17 +108,17 @@ main {
             appearance: none;
             -webkit-appearance: none;
             -moz-appearance: none;
-            height: 63px;
+            height: 3.9375rem;
             background: rgba($title-page-background-color, 0.5);
             background-image: url("data:image/svg+xml;utf8,<svg fill='black' height='100' viewBox='0 0 24 24' width='67' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/><path d='M0 0h24v24H0z' fill='none'/></svg>");
             background-repeat: no-repeat;
             background-position-x: 97.5%;
-            background-position-y: -17px;
-            border-radius: 6px;
+            background-position-y: -1.125rem;
+            border-radius: 0.375rem;
             margin-right: 2rem;
-            padding-left: 12px;
+            padding-left: 0.75rem;
             width: 100%;
-            margin-top: 3px;
+            margin-top: 0.1875rem;
         }
     }
 
@@ -130,23 +130,23 @@ main {
             flex: 0 0 50%;
 
             &:nth-child(odd) {
-                padding-right: 12px;
+                padding-right: 0.75rem;
             }
 
             &:nth-child(even) {
-                padding-left: 12px;
+                padding-left: 0.75rem;
             }
         }
     }
 
     &__payment-container {
         &__title {
-            margin-top: 14px;
-            border-bottom: 3px solid $border-color;
-            margin-bottom: 30px;
+            margin-top: 0.875rem;
+            border-bottom: 0.1875rem solid $border-color;
+            margin-bottom: 1.875rem;
 
             &--text {
-                padding-bottom: 10px;
+                padding-bottom: 0.625rem;
                 color: $main-form-color;
                 font-weight: 1000;
             }
@@ -155,22 +155,22 @@ main {
         &__radios {
             display: flex;
             position: relative;
-            margin-bottom: 42px;
+            margin-bottom: 2.625rem;
 
             &__option {
                 &--icon {
                     cursor: pointer;
                     position: absolute;
-                    top: 5px;
+                    top: 0.3125rem;
                 }
 
                 &--text {
-                    margin-left: 35px;
+                    margin-left: 2.1875rem;
                 }
 
 
                 &:nth-child(even) {
-                    margin-left: 116px;
+                    margin-left: 7.25rem;
                 }
             }
         }
@@ -179,17 +179,17 @@ main {
     &__credit-card-container {
         display: flex;
         flex-wrap: wrap;
-        padding-bottom: 5px;
-        border-bottom: 3px solid $border-color;
-        margin-bottom: 50px;
+        padding-bottom: 0.3125rem;
+        border-bottom: 0.1875rem solid $border-color;
+        margin-bottom: 3.125rem;
 
         &__name {
             flex: 0 0 50%;
-            padding-right: 12px;
+            padding-right: 0.75rem;
         }
 
         &__date {
-            padding-left: 12px;
+            padding-left: 0.75rem;
             display: flex;
             flex: 0 0 50%;
 
@@ -197,11 +197,11 @@ main {
                 flex: 0 0 50%;
 
                 &:nth-child(odd) {
-                    padding-right: 12px;
+                    padding-right: 0.75rem;
                 }
 
                 &:nth-child(even) {
-                    padding-left: 12px;
+                    padding-left: 0.75rem;
                 }
             }
         }
@@ -216,37 +216,37 @@ main {
         display: inline-block;
 
         &--button {
-            margin-top: 16px;
+            margin-top: 1rem;
             color: #FFF;
             background-color: $main-form-color;
             width: 73.58%;
-            height: 58px;
+            height: 3.625rem;
             justify-content: center;
             align-items: center;
-            border-radius: 12px;
+            border-radius: 0.75rem;
             border: none;
         }
 
         &--info-message {
-            margin-top: 19px;
-            font-size: 14px;
-            margin-bottom: 63px;
+            margin-top: 1.1875rem;
+            font-size: 0.875rem;
+            margin-bottom: 3.9375rem;
         }
     }
 }
 
 .footer {
-    min-height: 137px;
+    min-height: 8.5625rem;
     background-color: $header-footer-color;
     display: flex;
     align-items: center;
 
     &--text {
         color: $title-page-background-color;
-        font-size: 24px;
+        font-size: 1.5rem;
         font-weight: 700;
-        margin-left: 32px;
-        margin-top: 10px;
+        margin-left: 2rem;
+        margin-top: 0.625rem;
     }
 }
 
@@ -271,9 +271,9 @@ main {
         &__credit-card-container {
             display: flex;
             flex-wrap: wrap;
-            padding-bottom: 5px;
-            border-bottom: 3px solid $border-color;
-            margin-bottom: 50px;
+            padding-bottom: 0.3125rem;
+            border-bottom: 0.1875rem solid $border-color;
+            margin-bottom: 3.125rem;
     
             &__name {
                 flex: 0 0 100%;
@@ -288,11 +288,11 @@ main {
                     flex: 0 0 50%;
     
                     &:nth-child(odd) {
-                        padding-right: 5px;
+                        padding-right: 0.3125rem;
                     }
     
                     &:nth-child(even) {
-                        padding-left: 5px;
+                        padding-left: 0.3125rem;
                     }
                 }
             }
@@ -303,4 +303,3 @@ main {
         }
     }
 }
-
