--- a/Front-end/test-rhitmo/src/app/pages/main-screen/main-screen.component.scss
+++ b/Front-end/test-rhitmo/src/app/pages/main-screen/main-screen.component.scss
@@ -9,8 +9,8 @@ $border-color: #EEF3F7;
 $main-font: 'Koh Santepheap', serif;
 $header-title-font: 'Inter', sans-serif;
 
-$main-font-size: 24px;
-$title-page-font-size: 64px;
+$main-font-size: 1.5rem;
+$title-page-font-size: 4rem;
 
 $main-font-weight: 400;
 
@@ -38,34 +38,34 @@ body {
 
 .header {
     display: flex;
-    height: 69px;
-    padding: 0 32px;
+    height: 4.3125rem;
+    padding: 0 2rem;
     justify-content: space-between;
     align-items: center;
     background-color: $header-footer-color;
 
     &--logo {
-        width: 25px;
-        height: 25px;
+        width: 1.5625rem;
+        height: 1.5625rem;
     }
 
     &--title {
         color: $header-title-color;
         font-family: $header-title-font;
-        font-size: 18px;
-        margin-top: 10px;
-        word-spacing: 32px;
+        font-size: 1.125rem;
+        margin-top: 0.625rem;
+        word-spacing: 2rem;
     }
 }
 
 .title-page {
     background-color: rgba($title-page-background-color, 0.5);
-    height: 137px;
+    height: 8.5625rem;
     display: flex;
     justify-content: center;
 
     &--text {
-        padding-top: 34px;
+        padding-top: 2.125rem;
         width: 70%;
         font-size: $title-page-font-size;
     }
@@ -79,15 +79,15 @@ main {
 
 .page-body {
     width: 70vw;
-    margin-top: 62px;
+    margin-top: 3.875rem;
 }
 
 .grid-title-container {
-    border-bottom: 3px solid $border-color;
-    margin-bottom: 26px;
+    border-bottom: 0.1875rem solid $border-color;
+    margin-bottom: 1.625rem;
 
     &--text {
-        padding-bottom: 23px;
+        padding-bottom: 1.4375rem;
         color: $main-title-color;
         font-weight: 1000;
     }
@@ -96,14 +96,14 @@ main {
 .search-customer-container {
     display: flex;
     flex-direction: column;
-    margin-bottom: 53px;
+    margin-bottom: 2.6875rem;
 
     &--input {
-        height: 63px;
-        border-radius: 6px;
+        height: 3.9375rem;
+        border-radius: 0.375rem;
         background: rgba($title-page-background-color, 0.5);
-        margin-top: 3px;
-        padding-left: 12px;
+        margin-top: 0.1875rem;
+        padding-left: 0.75rem;
     }
 }
 
@@ -117,12 +117,12 @@ main {
 
         th,
         td {
-            padding-left: 42px;
-            border: 1px solid $table-border-color;
+            padding-left: 2.625rem;
+            border: 0.0625rem solid $table-border-color;
         }
 
         tbody tr {
-            height: 44px;
+            height: 2.75rem;
 
             &.input-row {
                 input {
@@ -142,28 +142,28 @@ main {
         &--btn-edit {
             cursor: pointer;
             position: absolute;
-            margin-left: 26px;
-            margin-top: .5%;
+            margin-left: 1.625rem;
+            margin-top: 0.03125rem;
         }
 
         &--btn-remove {
             cursor: pointer;
             position: absolute;
-            margin-left: 68px;
-            margin-top: .5%;
+            margin-left: 4.25rem;
+            margin-top: 0.03125rem;
         }
 
         &--btn-add {
             cursor: pointer;
             position: absolute;
-            margin-left: 26px;
-            margin-top: .5%;
+            margin-left: 1.625rem;
+            margin-top: 0.03125rem;
         }
     }
 }
 
 .footer {
-    min-height: 137px;
+    min-height: 8.5625rem;
     background-color: $header-footer-color;
     display: flex;
     align-items: center;
@@ -171,10 +171,10 @@ main {
 
     &--text {
         color: $title-page-background-color;
-        font-size: 24px;
+        font-size: 1.5rem;
         font-weight: 700;
-        margin-left: 32px;
-        margin-top: 10px;
+        margin-left: 2rem;
+        margin-top: 0.625rem;
     }
 }
 
